# askAssistant

./: .gitignore  DEMO_SCRIPT.md  GCP_SETUP.md  PLAN.md  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: auth.py  config.py  debug_routes.py  google_clients.py  groq_client.py  main.py  token_store.py
backend/app/agent/: execute.py  graph.py  interpret.py  schema.py  state.py
backend/app/nlu/: datetime_resolver.py  fuzzy_match.py
backend/app/services/: calendar.py  contacts.py  resolve.py  tasks.py  transcribe.py
backend/tests/: test_attendee_email_verification.py  test_contacts_matching.py  test_datetime_resolver.py
frontend/: README.md  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/done/: page.tsx
frontend/src/components/: icons.tsx
frontend/src/lib/: api.ts  auth.ts  chat.ts  speech.ts
