[project]
name = "assistant-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "google-api-python-client>=2.198.0",
    "google-auth>=2.56.2",
    "google-auth-oauthlib>=1.4.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.51.0",
]
